Fix dark mode

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -31,6 +31,7 @@
 
 body {
     background-color: var(--pico-background-color);
+    min-height: 100vh;
 }
 
 pb-page {
